--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-
-
-
-
     <style name="Edit_Text">
         <item name="android:background">@drawable/edit_text</item>
+    </style>
+    <style name="ContainerComponetes">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">25dp</item>
+        <item name="android:background">@drawable/container_componentes</item>
+        <item name="android:layout_margin">25dp</item>
     </style>
 </resources>
